--- a/flaskr/templates/add_journal/add_journal.html
+++ b/flaskr/templates/add_journal/add_journal.html
@@ -42,7 +42,7 @@
                             {{render_field(form.comment, rows="3", class="input-form h-auto rounded-3xl")}}
                         </p>
                         <p class="mt-2 lg:mt-4">
-                            {{render_field(form.picture_path, class="input-form sm:h-auto text-xs")}}
+                            {{render_field(form.picture_path, class="input-form h-auto text-xs")}}
                         </p>
                         <p class="mt-2 lg:mt-4 text-right">
                             {{form.submit(class="btn-lightorange h-10 px-6")}}
