--- a/flaskr/static/css/public/style.css
+++ b/flaskr/static/css/public/style.css
@@ -1431,6 +1431,8 @@ ul {
 
 /* base components */
 
+/* layout */
+
 .base-style {
   height: 100vh;
   padding-left: 2rem;
@@ -1462,6 +1464,62 @@ ul {
   height: 100%;
   width: 100%;
 }
+
+.white-style {
+  --tw-bg-opacity: 1;
+  background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
+  --tw-bg-opacity: 0.4;
+  border-radius: 0.25rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 2rem;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+  --tw-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+  width: 100%;
+}
+
+@media (min-width: 1280px){
+  .white-style{
+    margin-top: 2.5rem;
+  }
+}
+
+.layout-2 {
+  width: 80%;
+}
+
+@media (min-width: 1280px){
+  .layout-2{
+    width: 60%;
+  }
+}
+
+@media (min-width: 1536px){
+  .layout-2{
+    width: 50%;
+  }
+}
+
+.layout-3 {
+  width: 80%;
+}
+
+@media (min-width: 1024px){
+  .layout-3{
+    width: 50%;
+  }
+}
+
+@media (min-width: 1536px){
+  .layout-3{
+    width: 33.333333%;
+  }
+}
+
+/* font */
 
 .title {
   font-size: 3.75rem;
@@ -1503,84 +1561,7 @@ ul {
   }
 }
 
-.white-style {
-  --tw-bg-opacity: 1;
-  background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
-  --tw-bg-opacity: 0.4;
-  border-radius: 0.25rem;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-top: 2rem;
-  padding-top: 2rem;
-  padding-bottom: 2rem;
-  --tw-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-  width: 100%;
-}
-
-@media (min-width: 1280px){
-  .white-style{
-    margin-top: 2.5rem;
-  }
-}
-
-.form-style {
-  --tw-text-opacity: 1;
-  color: rgba(55, 65, 81, var(--tw-text-opacity));
-  width: 75%;
-}
-
-@media (min-width: 640px){
-  .form-style{
-    width: 66.666667%;
-  }
-}
-
-.icon-style {
-  --tw-border-opacity: 1;
-  border-color: rgba(255, 116, 0, var(--tw-border-opacity));
-  border-radius: 9999px;
-  border-width: 2px;
-}
-
-@media (min-width: 640px){
-  .icon-style{
-    border-width: 4px;
-  }
-}
-
-.layout-2 {
-  width: 80%;
-}
-
-@media (min-width: 1280px){
-  .layout-2{
-    width: 60%;
-  }
-}
-
-@media (min-width: 1536px){
-  .layout-2{
-    width: 50%;
-  }
-}
-
-.layout-3 {
-  width: 80%;
-}
-
-@media (min-width: 1024px){
-  .layout-3{
-    width: 50%;
-  }
-}
-
-@media (min-width: 1536px){
-  .layout-3{
-    width: 33.333333%;
-  }
-}
+/* button */
 
 .btn-lightorange {
   --tw-bg-opacity: 1;
@@ -1902,6 +1883,35 @@ ul {
   }
 }
 
+/* icon */
+
+.icon-style {
+  --tw-border-opacity: 1;
+  border-color: rgba(255, 116, 0, var(--tw-border-opacity));
+  border-radius: 9999px;
+  border-width: 2px;
+}
+
+@media (min-width: 640px){
+  .icon-style{
+    border-width: 4px;
+  }
+}
+
+/* form */
+
+.form-style {
+  --tw-text-opacity: 1;
+  color: rgba(55, 65, 81, var(--tw-text-opacity));
+  width: 75%;
+}
+
+@media (min-width: 640px){
+  .form-style{
+    width: 66.666667%;
+  }
+}
+
 .input-form {
   --tw-bg-opacity: 1;
   background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
@@ -1951,6 +1961,8 @@ ul {
     padding-right: 1rem;
   }
 }
+
+/* transform */
 
 .transform-scale {
   --tw-translate-x: 0;
