--- a/flaskr/templates/add_journal/add_journal.html
+++ b/flaskr/templates/add_journal/add_journal.html
@@ -44,7 +44,7 @@
                         <p class="mt-2 lg:mt-4">
                             {{render_field(form.picture_path, class="input-form h-auto text-xs")}}
                         </p>
-                        <p class="mt-2 lg:mt-4 text-right">
+                        <p class="mt-4 text-right">
                             {{form.submit(class="btn-lightorange h-10 px-6")}}
                         </p>
                     </div>
