--- a/flaskr/templates/login/login.html
+++ b/flaskr/templates/login/login.html
@@ -7,8 +7,7 @@
     {{ super() }}
     {% endblock %}
 
-    <div class="bg-style">
-       
+    <div class="bg-style">       
         <div class="layout-3">
             <h1 class="subtitle">Login</h1>
             <div class="white-style">
@@ -21,7 +20,7 @@
                         {{render_field(form.password, class="input-form")}}
                     </h6>
                     <h6 class="mt-4 lg:mt-8">
-                        {{form.submit(class="h-full btn-lightorange")}}
+                        {{form.submit(class="h-10 btn-lightorange")}}
                     </h6>
                 </form>
             </div>
