--- a/flaskr/static/css/src/style.css
+++ b/flaskr/static/css/src/style.css
@@ -152,26 +152,15 @@
         @apply h-56 sm:h-80 2xl:h-96 w-full overflow-scroll;
     }
     /* base components */
+    /* layout */
     .base-style {
         @apply h-screen w-screen px-8 md:px-12 xl:px-20 pb-24 md:pb-32 xl:pb-36;
     }
     .bg-style {
         @apply h-full w-full flex items-center justify-center;
     }
-    .title {
-        @apply text-center text-6xl md:text-7xl lg:text-8xl xl:text-9xl;
-    }
-    .subtitle {
-        @apply text-center text-6xl xl:text-7xl;
-    }
     .white-style {
         @apply flex w-full items-center justify-center bg-white bg-opacity-40 shadow-md rounded mt-8 xl:mt-10 py-8;
-    }
-    .form-style {
-        @apply w-3/4 sm:w-2/3 text-gray-700;
-    }
-    .icon-style {
-        @apply rounded-full border-2 sm:border-4 border-orange;
     }
     .layout-2 {
         @apply w-4/5 xl:w-3/5 2xl:w-1/2;
@@ -179,6 +168,14 @@
     .layout-3 {
         @apply w-4/5 lg:w-1/2 2xl:w-1/3;
     }
+    /* font */
+    .title {
+        @apply text-center text-6xl md:text-7xl lg:text-8xl xl:text-9xl;
+    }
+    .subtitle {
+        @apply text-center text-6xl xl:text-7xl;
+    }
+    /* button */
     .btn-lightorange {
         @apply bg-lightorange hover:bg-orange text-white focus:outline-none rounded-full shadow cursor-pointer duration-300 text-sm sm:text-base py-1 sm:py-2 px-4 xl:px-6;
     }
@@ -197,9 +194,18 @@
     .btn-back-style {
         @apply fixed bottom-2 md:bottom-3 xl:bottom-4 right-1 md:right-3 xl:right-4 text-white;
     }
+    /* icon */
+    .icon-style {
+        @apply rounded-full border-2 sm:border-4 border-orange;
+    }
+    /* form */
+    .form-style {
+        @apply w-3/4 sm:w-2/3 text-gray-700;
+    }
     .input-form {
         @apply h-10 w-full bg-white bg-opacity-50 hover:bg-opacity-90 focus:bg-opacity-90 text-gray-500 focus:outline-none rounded-full shadow duration-300 text-sm sm:text-base py-1 sm:py-2 px-2 sm:px-4;
     }
+    /* transform */
     .transform-scale {
         @apply transform hover:scale-105 ease-linear duration-300;
     }
