--- a/flaskr/templates/signup/signup.html
+++ b/flaskr/templates/signup/signup.html
@@ -8,7 +8,6 @@
     {% endblock %}
     
     <div class="bg-style">
-    
         <div class="layout-3">
             <h1 class="subtitle">Sign Up</h1>
             <div class="white-style">
@@ -27,7 +26,7 @@
                         {{render_field(form.password_confirm, class="input-form")}}
                     </h6>
                     <h6 class="mt-4 lg:mt-8">
-                        {{form.submit(class="h-full btn-lightorange")}}
+                        {{form.submit(class="h-10 btn-lightorange")}}
                     </h6>
                 </form>
             </div>
