--- a/flaskr/static/css/src/style.css
+++ b/flaskr/static/css/src/style.css
@@ -61,7 +61,7 @@
     }
     /* home.html */
     .home-style {
-        @apply h-full w-full grid grid-cols-1 sm:grid-cols-2 xl:grid-cols-4 gap-0 sm:gap-4 py-0 sm:py-4;
+        @apply h-full w-full relative grid grid-cols-1 sm:grid-cols-2 xl:grid-cols-4 gap-0 sm:gap-4 py-0 sm:py-4;
     }
     .title-style {
         @apply w-full absolute bottom-1/3 left-0 z-10 text-center text-gray-900;
@@ -80,16 +80,19 @@
     }
     /* journal.html */
     .journal-style {
-        @apply min-h-screen w-full grid grid-cols-1 lg:grid-cols-2 gap-0 lg:gap-8;
+        @apply min-h-screen w-full grid grid-cols-1 lg:grid-cols-2 gap-4 sm:gap-0 lg:gap-8;
+    }
+    .pages-style {
+        @apply h-screen flex flex-wrap items-center mb-4 sm:mb-0;
     }
     .page-style {
-        @apply h-5/6 w-full bg-cover bg-center bg-no-repeat rounded shadow-md py-1;
+        @apply h-full sm:h-5/6 w-full bg-cover bg-center bg-no-repeat rounded shadow-md py-1;
     }
     .page-top-style {
         @apply h-1/2 xl:h-2/3 w-full flex justify-center relative;
     }
     .page-bottom-style {
-        @apply h-1/2 xl:h-1/3 w-full flex items-center py-2 px-4;
+        @apply h-1/2 xl:h-1/3 w-full flex items-center py-2 px-6 sm:px-4;
     }
     .photo-style-2 {
         @apply h-full w-5/6 sm:w-2/3 lg:w-5/6 flex justify-center relative bg-cover bg-center bg-no-repeat transform rounded shadow-md border-8 border-yellow-50 -rotate-2;
@@ -107,7 +110,7 @@
         @apply w-1/3 lg:w-1/2 xl:w-1/3 2xl:w-1/4;
     }
     .photo-h1-2 {
-        @apply text-center text-xl sm:text-2xl xl:text-3xl 2xl:text-4xl;
+        @apply text-center text-lg sm:text-2xl xl:text-3xl 2xl:text-4xl;
     }
     .label-h1 {
         @apply absolute text-center text-xs sm:text-lg xl:text-xl 2xl:text-2xl;
