--- a/flaskr/static/css/src/style.css
+++ b/flaskr/static/css/src/style.css
@@ -57,7 +57,7 @@
         @apply inline-block hover:opacity-75 duration-300;
     }
     .btn-toggle {
-        @apply flex items-center bg-transparent hover:bg-orange focus:outline-none border border-gray-700 hover:border-orange hover:text-white rounded duration-300 py-2 px-3;
+        @apply flex items-center bg-transparent hover:bg-lightorange focus:outline-none border border-gray-700 hover:border-lightorange hover:text-white rounded duration-300 py-2 px-3;
     }
     /* home.html */
     .home-style {
@@ -92,7 +92,7 @@
         @apply h-1/2 xl:h-2/3 w-full flex justify-center relative;
     }
     .page-bottom-style {
-        @apply h-1/2 xl:h-1/3 w-full flex items-center py-2 px-6 sm:px-4;
+        @apply h-1/2 xl:h-1/3 w-full flex items-center py-2 px-6;
     }
     .photo-style-2 {
         @apply h-full w-5/6 sm:w-2/3 lg:w-5/6 flex justify-center relative bg-cover bg-center bg-no-repeat transform rounded shadow-md border-8 border-yellow-50 -rotate-2;
@@ -104,7 +104,7 @@
         @apply w-1/3 flex items-center justify-center absolute top-16 right-0 transform rotate-2;
     }
     .info-style {
-        @apply w-full flex items-center justify-between mt-2; 
+        @apply w-full flex items-center justify-between mt-4 sm:mt-2; 
     }
     .icon-size-2 {
         @apply w-1/3 lg:w-1/2 xl:w-1/3 2xl:w-1/4;
@@ -180,16 +180,16 @@
     }
     /* button */
     .btn-lightorange {
-        @apply bg-lightorange hover:bg-orange text-white focus:outline-none rounded-full shadow cursor-pointer duration-300 text-sm sm:text-base py-1 sm:py-2 px-4 xl:px-6;
+        @apply font-josefin bg-lightorange hover:bg-orange text-white focus:outline-none rounded-full shadow cursor-pointer duration-300 text-sm sm:text-base py-1 sm:py-2 px-4 xl:px-6;
     }
     .btn-lightorange-sm {
-        @apply bg-lightorange hover:bg-orange text-white focus:outline-none rounded-full shadow cursor-pointer duration-300 text-xs sm:text-sm py-1 sm:py-2 px-3 md:px-4;
+        @apply font-josefin bg-lightorange hover:bg-orange text-white focus:outline-none rounded-full shadow cursor-pointer duration-300 text-xs sm:text-sm py-1 sm:py-2 px-3 md:px-4;
     }
     .btn-orange {
-        @apply bg-lightorange hover:bg-transparent text-white hover:text-lightorange focus:outline-none border sm:border-2 border-transparent hover:border-lightorange rounded-full shadow hover:shadow-none cursor-pointer duration-300 text-sm py-2 sm:py-1 px-4 sm:px-3;
+        @apply font-josefin bg-lightorange hover:bg-transparent text-white hover:text-lightorange focus:outline-none border sm:border-2 border-transparent hover:border-lightorange rounded-full shadow hover:shadow-none cursor-pointer duration-300 text-sm py-2 sm:py-1 px-4 sm:px-3;
     }
     .btn-transparent {
-        @apply bg-transparent hover:bg-lightorange text-lightorange hover:text-white focus:outline-none border sm:border-2 border-lightorange hover:border-lightorange rounded-full hover:shadow focus:shadow-inner cursor-pointer duration-300 text-sm py-2 sm:py-1 px-4 sm:px-3;
+        @apply font-josefin bg-transparent hover:bg-lightorange text-lightorange hover:text-white focus:outline-none border sm:border-2 border-lightorange hover:border-lightorange rounded-full hover:shadow focus:shadow-inner cursor-pointer duration-300 text-sm py-2 sm:py-1 px-4 sm:px-3;
     }
     .btn-back {
         @apply h-6 md:h-7 lg:h-8 xl:h-12 w-6 md:w-7 lg:w-8 xl:w-12 flex items-center justify-center bg-transparent hover:bg-white border lg:border-2 border-white shadow-none hover:shadow rounded-full duration-300 hover:text-orange;
