--- a/flaskr/templates/home.html
+++ b/flaskr/templates/home.html
@@ -10,7 +10,7 @@
         <!-- title -->
         <div class="title-style">
             <h1 class="title">Journaly</h1>
-            <h5 class="font-semibold mt-8 xl:mt-16">Go on a journey, Write a journal.</h5>
+            <h5 class="mt-8 xl:mt-16">Go on a journey, Write a journal.</h5>
         </div>
 
         <!-- background journals -->
