--- a/flaskr/static/css/public/style.css
+++ b/flaskr/static/css/public/style.css
@@ -956,6 +956,13 @@ ul {
   justify-content: center;
   height: 66.666667%;
   opacity: 0.5;
+}
+
+.photo-style:hover{
+  opacity: 0.7;
+}
+
+.photo-style{
   position: relative;
   --tw-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
@@ -968,6 +975,7 @@ ul {
   --tw-scale-x: 1;
   --tw-scale-y: 1;
   transform: translateX(var(--tw-translate-x)) translateY(var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  transition-duration: 300ms;
 }
 
 .photo-bottom-style {
