--- a/flaskr/static/css/src/style.css
+++ b/flaskr/static/css/src/style.css
@@ -67,7 +67,7 @@
         @apply w-full absolute bottom-1/3 left-0 z-10 text-center text-gray-900;
     }
     .photo-style {
-        @apply h-2/3 w-full flex justify-center relative bg-cover bg-center bg-no-repeat transform rounded shadow-md border-8 border-yellow-50 opacity-50;
+        @apply h-2/3 w-full flex justify-center relative bg-cover bg-center bg-no-repeat transform rounded shadow-md border-8 border-yellow-50 opacity-50 hover:opacity-70 duration-300;
     }
     .photo-bottom-style {
         @apply h-1/5 w-full flex items-center justify-center absolute bottom-0 bg-yellow-50;
