--- a/flaskr/templates/add_journal/add_journal.html
+++ b/flaskr/templates/add_journal/add_journal.html
@@ -2,7 +2,7 @@
 {% extends "/base.html" %}
 {% block content %}
 
-<div class="base-style border-4">
+<div class="base-style">
 {% block header %}
 {{ super() }}
 {% endblock %}
