--- a/flaskr/templates/home.html
+++ b/flaskr/templates/home.html
@@ -19,7 +19,7 @@
             {% if journal.id == 1 %}
             <div class="flex sm:block items-center">
                 <div class="photo-style -rotate-2" style="background-image:url({{url_for('static', filename=journal.picture_path)}})">
-                    <img src="/static/image/tape.png" alt="" class="tape-style">
+                    <img src="/static/image/tape.png" alt="tape" class="tape-style">
                     <div class="photo-bottom-style">
                         <h1 class="photo-h1">
                             {{ journal.title}}
@@ -32,7 +32,7 @@
             {% if journal.id == 2 %}
             <div class="hidden xl:flex items-end">
                 <div class="photo-style rotate-2" style="background-image:url({{url_for('static', filename=journal.picture_path)}})">
-                    <img src="/static/image/tape.png" alt="" class="tape-style">
+                    <img src="/static/image/tape.png" alt="tape" class="tape-style">
                     <div class="photo-bottom-style">
                         <h1 class="photo-h1">
                             {{ journal.title}}
@@ -45,7 +45,7 @@
             {% if journal.id == 3 %}
             <div class="hidden xl:block">
                 <div class="photo-style -rotate-2" style="background-image:url({{url_for('static', filename=journal.picture_path)}})">
-                    <img src="/static/image/tape.png" alt="" class="tape-style">
+                    <img src="/static/image/tape.png" alt="tape" class="tape-style">
                     <div class="photo-bottom-style">
                         <h1 class="photo-h1">
                             {{ journal.title}}
@@ -58,7 +58,7 @@
             {% if journal.id == 4 %}
             <div class="hidden sm:flex items-end">
                 <div class="photo-style rotate-2" style="background-image:url({{url_for('static', filename=journal.picture_path)}})">
-                    <img src="/static/image/tape.png" alt="" class="tape-style">
+                    <img src="/static/image/tape.png" alt="tape" class="tape-style">
                     <div class="photo-bottom-style">
                         <h1 class="photo-h1">
                             {{ journal.title}}
