--- a/flaskr/templates/journal/journal.html
+++ b/flaskr/templates/journal/journal.html
@@ -15,7 +15,7 @@
             <!-- photo -->
             <div class="page-top-style">
                 <div class="photo-style-2" style="background-image:url({{url_for('static', filename=journal.picture_path)}})">
-                    <img src="/static/image/tape.png" alt="" class="tape-style-2">
+                    <img src="/static/image/tape.png" alt="tape" class="tape-style-2">
                     <div class="photo-bottom-style">
                         <h1 class="photo-h1-2">
                             {{ journal.title }}
@@ -23,7 +23,7 @@
                     </div>
                 </div>
                 <div class="label-style">
-                    <img src="/static/image/label3.png" alt="" class="w-full shadow">
+                    <img src="/static/image/label3.png" alt="label" class="w-full shadow">
                     <h1 class="label-h1">
                         {{ journal.city }}, {{ journal.country }}
                     </h1>
