--- a/flaskr/templates/login/login.html
+++ b/flaskr/templates/login/login.html
@@ -20,7 +20,7 @@
                         {{render_field(form.password, class="input-form")}}
                     </h6>
                     <h6 class="mt-4 lg:mt-8">
-                        {{form.submit(class="h-10 btn-lightorange")}}
+                        {{form.submit(class="btn-lightorange")}}
                     </h6>
                 </form>
             </div>
