--- a/flaskr/templates/add_journal/add_journal.html
+++ b/flaskr/templates/add_journal/add_journal.html
@@ -45,7 +45,7 @@
                             {{render_field(form.picture_path, class="input-form h-auto text-xs")}}
                         </p>
                         <p class="mt-4 text-right">
-                            {{form.submit(class="btn-lightorange h-10 px-6")}}
+                            {{form.submit(class="btn-lightorange px-6")}}
                         </p>
                     </div>
                 </form>
