--- a/flaskr/templates/journal/journal.html
+++ b/flaskr/templates/journal/journal.html
@@ -41,7 +41,7 @@
                     {% for user in users %}
                     {% if journal.from_user_id == user.id %}
                         <!-- icon and name -->
-                        <div class="w-1/3 flex items-center">
+                        <div class="w-1/2 sm:w-1/3 flex items-center">
                             <div class="icon-size-2">
                                 {% if user.picture_path %}
                                 <img src="{{ url_for('static', filename=user.picture_path) }}" class="icon-style">
