--- a/flaskr/templates/signup/signup.html
+++ b/flaskr/templates/signup/signup.html
@@ -26,7 +26,7 @@
                         {{render_field(form.password_confirm, class="input-form")}}
                     </h6>
                     <h6 class="mt-4 lg:mt-8">
-                        {{form.submit(class="h-10 btn-lightorange")}}
+                        {{form.submit(class="btn-lightorange")}}
                     </h6>
                 </form>
             </div>
