--- a/flaskr/templates/add_journal/add_journal.html
+++ b/flaskr/templates/add_journal/add_journal.html
@@ -38,13 +38,13 @@
                         <p class="mt-2 lg:mt-0">
                             {{render_field(form.title, class="input-form")}}
                         </p>
-                        <p class="mt-2 lgmt-4">
+                        <p class="mt-2 lg:mt-4">
                             {{render_field(form.comment, rows="3", class="input-form h-auto rounded-3xl")}}
                         </p>
                         <p class="mt-2 lg:mt-4">
                             {{render_field(form.picture_path, class="input-form h-auto text-xs")}}
                         </p>
-                        <p class="mt-4 text-right">
+                        <p class="mt-4 lg:mt-8 text-right">
                             {{form.submit(class="btn-lightorange px-6")}}
                         </p>
                     </div>
