--- a/flaskr/templates/search/search.html
+++ b/flaskr/templates/search/search.html
@@ -25,7 +25,7 @@
             <!-- search result -->
             {% if not form.keyword.data %}
             {% else %}
-            <div class="white-style">
+            <div class="white-style px-4 sm:px-0">
                 <div class="result-style">
                     <div class="wrap-style">
                     {% set isMatched = {'isMatched':False} %}
