--- a/flaskr/templates/contact/contact.html
+++ b/flaskr/templates/contact/contact.html
@@ -12,7 +12,7 @@
             <h6 class="mt-10">Feel free to contact me</h1>
             <h6>
                 <small>
-                    <a href="https://ayumitanaka.net" class="hover:text-orange">https://ayumitanaka.net</a>
+                    <a href="https://ayumitanaka.net" class="duration-300 hover:text-orange">https://ayumitanaka.net</a>
                     <br>&copy; 2021  <a href="https://ayumitanaka.net" class="hover:text-orange">Ayumi Tanaka</a> All Rights Reserved
                 </small>
             </h6>
