--- a/flaskr/templates/contact/contact.html
+++ b/flaskr/templates/contact/contact.html
@@ -13,7 +13,7 @@
             <h6>
                 <small>
                     <a href="https://ayumitanaka.net" class="duration-300 hover:text-orange">https://ayumitanaka.net</a>
-                    <br>&copy; 2021  <a href="https://ayumitanaka.net" class="hover:text-orange">Ayumi Tanaka</a> All Rights Reserved
+                    <br>&copy; 2021  <a href="https://ayumitanaka.net" class="duration-300 hover:text-orange">Ayumi Tanaka</a> All Rights Reserved
                 </small>
             </h6>
         </div>
